# pylogicaldecoding

./: .gitignore  INSTALL.md  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  setup.py
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
examples/: connect.py  drop_slot.py
lib/: __init__.py
logicaldecoding/: logicaldecodingmodule.c  pylogicaldecoding.h  reader_type.c  streamutils.c  streamutils.h
pghx/: errors.c  errors.h  logicaldecoding.c  logicaldecoding.h  utils.h
python/lib/: __init__.py
src/: Makefile.am  Makefile.in
src/bindings/python/logicaldecoding/: reader_type.c
src/pghx/: Makefile.am  Makefile.in  utils.c
tests/: Makefile.am  Makefile.in  check_pghx.c
